# marmotte_description

./: .gitignore  CMakeLists.txt  package.xml
launch/: description.launch  description.launch.py  description.launch.xml  description_launch.py  description_launch.py_bcp  new_description_launch.py
meshes/: hd2_marble_base_body_metric.stl  sensor_rack_lowres_shallow_laser.stl  sensor_rack_support_lowres.stl
new_urdf_01-16-2023/arm_components/: gen3_robotiq_2f_85.xacro  kortex_robot.xacro
new_urdf_01-16-2023/arm_components/arm/urdf/: gen3_macro.xacro
new_urdf_01-16-2023/arm_components/gripper/urdf/: robotiq_2f_85_macro.xacro  robotiq_arg2f.xacro  robotiq_arg2f_85_model_macro.xacro
new_urdf_01-16-2023/launch/: description.launch
new_urdf_01-16-2023/urdf/: marmotte.urdf.xacro
new_urdf_01-16-2023/urdf/bck/: marmotte.urdf.xacro
urdf/: arm.urdf.xacro  cameras.urdf.xacro  marmotte.urdf.xacro  robot.urdf.xacro  sensors.urdf.xacro  sensors_new.urdf.xacro
urdf/bck/: marmotte_.urdf.xacro
